# ruyi

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml
benches/: buf.rs
examples/: daytime.rs  discard.rs  echo.rs  echo2.rs  pingpong_client.rs
src/: lib.rs  slab.rs  stream.rs  task.rs
src/buf/: append.rs  block.rs  bytes.rs  err.rs  get.rs  hex_dump.rs  mod.rs  prepend.rs  read.rs  reader.rs  set.rs  window.rs  windows.rs  writer.rs
src/buf/codec/: i8.rs  mod.rs  u8.rs  u8s.rs
src/buf/codec/f32/: big_endian.rs  little_endian.rs  mod.rs
src/buf/codec/f64/: big_endian.rs  little_endian.rs  mod.rs
src/buf/codec/i16/: big_endian.rs  little_endian.rs  mod.rs  varint.rs
src/buf/codec/i32/: big_endian.rs  little_endian.rs  varint.rs
src/buf/codec/i64/: big_endian.rs  varint.rs  (+1 more)
src/channel/: err.rs  mod.rs  spsc.rs
src/futures_ext/: future.rs  mod.rs  sink.rs  stream.rs
src/io/: mod.rs
src/io/util/: copy.rs  mod.rs  read.rs  split.rs  write.rs
src/net/: mod.rs  tcp.rs
src/nio/: awakener.rs  mod.rs  poll.rs  tcp.rs
src/nio/sys/: mod.rs
src/proto/: mod.rs  u16be_prefix.rs  u16le_prefix.rs  u32be_prefix.rs  u32le_prefix.rs  u8_prefix.rs
src/reactor/: eloop.rs  event_loop.rs  gate.rs  mod.rs  pollable_io.rs  sleep.rs  timeout.rs  timer.rs  wheel.rs
src/service/tcp/: mod.rs
src/sync/: spsc.rs
src/sys/: eloop.rs  mod.rs  nio.rs
src/sys/unix/: awakener.rs  err.rs  mod.rs  nio.rs  spsc.rs
src/sys/windows/: awakener.rs  mod.rs  nio.rs  poll.rs  spsc.rs
tests/: buf.rs  channel.rs  gate.rs  slab.rs  sync.rs  timer.rs
(+37 files in other folders)
